--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -25,13 +25,10 @@
 
                 <ImageView
                     android:id="@+id/newsImage"
-                    style="@style/NewsArticle.Image"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/image_size"
                     android:contentDescription="@string/news_image"
-                    android:scaleType="fitCenter"
-                    android:clipToOutline="true"
-                    android:layout_margin="1dp"
+                    android:scaleType="centerCrop"
                     tools:src="@drawable/ic_round_wallpaper_24" />
                 <TextView
                     android:id="@+id/newsAuthor"
